<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Add new hike"
            android:textSize="30dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:textAlignment="textStart"
            android:text="@string/name_hike"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/name_hike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_data"
            android:padding="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:textAlignment="textStart"
            android:text="@string/location_hike"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/name_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_data"
            android:padding="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:textAlignment="textStart"
            android:text="@string/date_hike"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/date_hike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_data"
            android:padding="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/parking_hike"
                android:textAlignment="textStart"
                android:textSize="18dp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioYes"
                        android:layout_width="96dp"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="Yes" />

                    <RadioButton
                        android:id="@+id/radioNo"
                        android:layout_width="92dp"
                        android:layout_height="wrap_content"
                        android:text="No" />
                </LinearLayout>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/length_hike"
                android:textAlignment="textStart"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/length_hike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_data"
                android:padding="5dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:textAlignment="textStart"
                android:text="@string/level_hike"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/level_hike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_data"
                android:padding="5dp"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:textAlignment="textStart"
            android:text="Description"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/description_hike"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/input_data"
            android:padding="5dp"/>

        <Button
            android:id="@+id/addDetailsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add" />

    </LinearLayout>

</FrameLayout>